<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Solas Match Express</string>
    <string name="welcome">Welcome to Solas Match Express.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="pass">Password:</string>
    <string name="loginSuccess">Login was successful.</string>
    <string name="loginFailure">Login was unsuccessful.</string>
    <string name="registerSuccess">Registration was successful.</string>
    <string name="registerFailure">Registration was unsuccessful.</string>
    <string name="translationMessage">Translation tasks Claim a task, translate it, upload it</string>
    <string name="menuMessage">Claim a task, translate it, upload it</string>
    <string name="featured">Featured Task:</string>
    <string name="viewTask">View Task</string>
    <string name="searchForTasks">Search for Tasks</string>
    <string name="searchForOrgs">Search for organisations</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="UserDetailsMessage">View user details here</string>
    <string name="publicDisplayName">Public display name:</string>
    <string name="bio">Biography:</string>
    <string name="translationTask">Translation task:</string>
    <string name="sourceLanguage">Source Language:</string>
    <string name="targetLanguage">Target Language:</string>
    <string name="tags">Tags:</string>
    <string name="impact">Impact:</string>
    <string name="orgName">Organisation Name:</string>
    <string name="created">Created Date:</string>
    <string name="claimTask">Claim Task</string>
    <string name="claimTaskSucess">Task claim sucessful</string>
    <string name="claimTaskFailure">Task claim faild</string>
</resources>
