<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:binding="http://www.gueei.com/android-binding/"
              android:orientation="vertical"   android:gravity="center"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent"
            android:layout_gravity="center_vertical">
        <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content"
                       android:orientation="vertical" >
            <TextView   android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:text="@string/menuMessage" android:gravity="center"
                        android:layout_margin="5dp" android:padding="5dp"
                        android:textStyle="bold"/>
            <LinearLayout  android:layout_width="fill_parent" android:layout_height="100dp"
                           android:orientation="vertical" android:layout_marginTop="5dp">
                <LinearLayout   android:layout_width="fill_parent" android:layout_height="30dp"
                                android:orientation="horizontal" android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp" android:gravity="center">
                    <TextView   android:layout_width="fill_parent" android:layout_height="fill_parent"
                                android:text="@string/featured" android:gravity="center"
                                android:textStyle="bold" android:layout_weight=".6"/>
                    <Button android:layout_weight=".4" android:padding="1dp"
                            android:layout_height="fill_parent" android:layout_width="fill_parent"
                            android:text="@string/viewTask" binding:onClick="viewFeturedTask"
                            android:gravity="center"/>

                </LinearLayout>
                <TextView   android:layout_width="fill_parent" android:layout_height="fill_parent"
                            binding:text="feturedTask" android:gravity="left"
                            android:layout_marginTop="5dp" android:padding="5dp"
                            android:layout_marginLeft="12dp" android:layout_marginRight="12dp"
                            binding:backgroundColor="colour" />

            </LinearLayout>

            <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content"
                           android:orientation="vertical" android:layout_marginTop="5dp"
                           android:gravity="center_horizontal">
                <Button android:layout_weight=".5" android:padding="5dp"
                        android:layout_height="wrap_content" android:layout_width="fill_parent"
                        android:text="@string/searchForTasks" binding:onClick="searchForTasks"
                        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"   android:layout_marginBottom="2dp"/>
                <Button android:layout_weight=".5" android:padding="5dp"
                        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"   android:layout_marginBottom="2dp"
                        android:layout_height="wrap_content" android:layout_width="fill_parent"
                        android:text="@string/searchForOrgs" binding:onClick="searchForOrgs"/>
                <Button android:layout_weight=".5" android:padding="5dp"
                        android:layout_height="wrap_content" android:layout_width="fill_parent"
                        android:text="@string/profile" binding:onClick="viewProfile"
                        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"   android:layout_marginBottom="2dp"/>
                <Button android:layout_weight=".5" android:padding="5dp"
                        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"   android:layout_marginBottom="2dp"
                        android:layout_height="wrap_content" android:layout_width="fill_parent"
                        android:text="@string/about" binding:onClick="about"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

