<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:binding="http://www.gueei.com/android-binding/"
              android:orientation="vertical"   android:gravity="center"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent"
                android:layout_gravity="center_vertical">
        <LinearLayout  android:layout_width="fill_parent" android:layout_height="wrap_content"
                       android:orientation="vertical" >
            <LinearLayout   android:layout_width="fill_parent" android:layout_height="50dp"
                            android:orientation="horizontal" android:gravity="left"
                            android:layout_margin="5dp" android:padding="5dp"
                            binding:backgroundColor="colour">
                <ImageView  android:layout_width="50dp" android:layout_height="50dp"
                            binding:source="gravitar"/>
                <TextView   android:layout_width="wrap_content" android:layout_height="wrap_content"
                            binding:text="displayName"
                            android:layout_margin="5dp" android:padding="5dp"
                            android:textStyle="bold" android:gravity="left"/>
                <TextView   android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/UserDetailsMessage"
                            android:layout_margin="5dp" android:padding="5dp"
                            android:gravity="right"/>
            </LinearLayout>
            <LinearLayout   android:layout_width="fill_parent" android:layout_height="wrap_content"
                            android:orientation="vertical" android:gravity="center_vertical"
                            android:layout_margin="5dp" android:padding="5dp"
                            binding:backgroundColor="colour2">
                <TextView   android:layout_width="fill_parent" android:layout_height="wrap_content"
                            android:text="@string/publicDisplayName"
                            android:layout_marginTop="5dp" android:padding="5dp"
                            android:textStyle="bold" android:gravity="left"
                            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
                <TextView   android:layout_width="fill_parent" android:layout_height="wrap_content"
                            binding:text="displayName" android:gravity="right"
                            android:padding="5dp" android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"/>
                <TextView   android:layout_width="fill_parent" android:layout_height="wrap_content"
                            android:text="@string/bio"
                            android:padding="5dp"
                            android:textStyle="bold" android:gravity="left"
                            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
                <TextView   android:layout_width="fill_parent" android:layout_height="wrap_content"
                            binding:text="bio" android:gravity="right"
                            android:padding="5dp" android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

